# voraus-python-template

./: .gitignore  README.md  cookiecutter.json  test_config.yaml  tox.ini
.github/: CODEOWNERS
cookiecutter-pypackage/: .gitignore  AUTHORS.rst  CHANGELOG.rst  README.rst  pyproject.toml  setup.cfg  tox.ini
cookiecutter-pypackage/.github/: CODEOWNERS
cookiecutter-pypackage/.github/workflows/: pr_lint.yml
cookiecutter-pypackage/docs/: conf.py  get_started.rst  index.rst
cookiecutter-pypackage/docs/_scripts/: generate_license_information.py
cookiecutter-pypackage/docs/_templates/: license_compliance.rst.j2
cookiecutter-pypackage/src/cookiecutter_pypackage/: __init__.py  example.py
cookiecutter-pypackage/tests/: __init__.py
cookiecutter-pypackage/tests/integration/: __init__.py
cookiecutter-pypackage/tests/resources/: example_resource.txt
cookiecutter-pypackage/tests/unit/: test_app_functions.py  test_example.py
cookiecutter-pypackage/tests/utils/: __init__.py
extensions/: git_extension.py
hooks/: post_gen_project.py
{{cookiecutter.repo_name}}/: .gitignore  AUTHORS.rst  README.rst  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.repo_name}}/.github/: CODEOWNERS
{{cookiecutter.repo_name}}/.github/workflows/: pr_lint.yml  python_template_update_checks.yml
{{cookiecutter.repo_name}}/docs/: conf.py  index.rst  license_compliance.rst
{{cookiecutter.repo_name}}/docs/_scripts/: generate_license_information.py
{{cookiecutter.repo_name}}/src/{{cookiecutter.import_name}}/: __init__.py  example.py
{{cookiecutter.repo_name}}/tests/: conftest.py
{{cookiecutter.repo_name}}/tests/resources/: __init__.py
{{cookiecutter.repo_name}}/tests/unit/: __init__.py  test_app_functions.py  test_example.py
{{cookiecutter.repo_name}}/tests/utils/: __init__.py
