[metadata]
name = cookiecutter-pypackage
author = Max Mustermann
author_email = max.mustermann@example.com
description = A cookiecutter for Python packages.
long_description = file:README.rst
long_description_content_type = text/x-rst
license = commercial
url = www.example.com


[options]
python_requires = >=3.11
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata


[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    %(tox)s
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    %(lint-template)s
    # Add your linting dependencies below this line

test =
    %(test-template)s
    # Add your testing dependencies below this line.
    # Dependencies that are imported in one of your files
    # must also be added to the linting dependencies.

doc =
    %(doc-template)s
    # Add your documentation dependencies below this line

build =
    %(build-template)s
    # Add your build dependencies below this line


##########################################
# DO NOT CHANGE ANYTHING BELOW THIS LINE #
##########################################

tox =
    tox==4.11.4

lint-template =
    isort==5.13.2
    black==23.12.1
    mypy==1.8.0
    pylint==3.0.3
    pytest==7.4.4
    types-docutils
    types-setuptools
    jinja2==3.1.2
    ruff==0.1.11

test-template =
    pytest==7.4.4
    pytest-randomly==3.15.0
    pytest-cov==4.1.0
    coverage[toml]==7.4.0

doc-template =
    sphinx==7.2.6
    sphinx_rtd_theme==2.0.0
    sphinx-autodoc-typehints==1.25.2
    pip-licenses==4.3.3
    jinja2==3.1.2

build-template =
    build[virtualenv]==1.0.3
