[metadata]
name = {{ cookiecutter.package_name }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file:README.rst
long_description_content_type = text/x-rst
license = commercial
url = {{ cookiecutter.url }}


[options]
python_requires = >=3.9
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata


[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    %(tox)s
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    %(lint-template)s
    # Add your linting dependencies below this line

test =
    %(test-template)s
    # Add your testing dependencies below this line.
    # Dependencies that are imported in one of your files
    # must also be added to the linting dependencies.

doc =
    %(doc-template)s
    # Add your documentation dependencies below this line

build =
    %(build-template)s
    # Add your build dependencies below this line


##########################################
# DO NOT CHANGE ANYTHING BELOW THIS LINE #
##########################################

tox =
    tox==4.11.0

lint-template =
    isort==5.12.0
    black==23.3.0
    mypy==1.4.0
    pylint==2.17.4
    pydocstyle[toml]==6.3.0
    pytest==7.3.2
    types-docutils
    types-setuptools

test-template =
    pytest==7.3.2
    pytest-randomly==3.12.0
    pytest-cov==4.1.0
    coverage[toml]==7.2.7

doc-template =
    sphinx==6.2.1 # Sphinx 7 not supported by RTD theme yet: https://github.com/readthedocs/sphinx_rtd_theme/issues/1463
    sphinx_rtd_theme==1.2.2
    sphinx-autodoc-typehints==1.23.0 # Anything higher depends on Sphinx 7
    pip-licenses==4.3.2
    sphinx-jinja==2.0.2

build-template =
    build[virtualenv]==0.10.0
