[metadata]
name = {{ cookiecutter.package_name }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file:README.rst
long_description_content_type = text/x-rst
license = commercial
url = {{ cookiecutter.url }}


[options]
python_requires = >=3.9
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata


[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    %(tox)s
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    %(lint-template)s
    # Add your linting dependencies below this line

test =
    %(test-template)s
    # Add your testing dependencies below this line.
    # Dependencies that are imported in one of your files
    # must also be added to the linting dependencies.

doc =
    %(doc-template)s
    # Add your documentation dependencies below this line

build =
    %(build-template)s
    # Add your build dependencies below this line


##########################################
# DO NOT CHANGE ANYTHING BELOW THIS LINE #
##########################################

tox =
    tox==4.11.1

lint-template =
    isort==5.12.0
    black==23.7.0
    mypy==1.5.1
    pylint==2.17.5
    pydocstyle[toml]==6.3.0
    pytest==7.4.1
    types-docutils
    types-setuptools

test-template =
    pytest==7.4.1
    pytest-randomly==3.15.0
    pytest-cov==4.1.0
    coverage[toml]==7.3.1

doc-template =
    sphinx==7.2.5
    sphinx_rtd_theme==1.3.0
    sphinx-autodoc-typehints==1.24.0
    pip-licenses==4.3.2
    sphinx-jinja==2.0.2

build-template =
    build[virtualenv]==1.0.3
