[metadata]
name = {{ cookiecutter.package_name }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.project_short_description }}
long_description = file:README.rst
long_description_content_type = text/x-rst
license = commercial
url = {{ cookiecutter.url }}


[options]
python_requires = >=3.11
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata


[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    %(tox)s
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    %(lint-template)s
    # Add your linting dependencies below this line

test =
    %(test-template)s
    # Add your testing dependencies below this line.
    # Dependencies that are imported in one of your files
    # must also be added to the linting dependencies.

doc =
    %(doc-template)s
    # Add your documentation dependencies below this line

build =
    %(build-template)s
    # Add your build dependencies below this line


##########################################
# DO NOT CHANGE ANYTHING BELOW THIS LINE #
##########################################

tox =
    tox==4.12.1

lint-template =
    isort==5.13.2
    black==24.1.1
    mypy==1.8.0
    pylint==3.0.3
    pytest==8.0.0
    types-docutils
    types-setuptools
    jinja2==3.1.3
    ruff==0.2.0

test-template =
    pytest==8.0.0
    pytest-randomly==3.15.0
    pytest-cov==4.1.0
    coverage[toml]==7.4.0

doc-template =
    sphinx==7.2.6
    sphinx_rtd_theme==2.0.0
    sphinx-autodoc-typehints==1.25.3
    pip-licenses==4.3.4
    jinja2==3.1.3

build-template =
    build[virtualenv]==1.0.3
